2008-04-23  Holger Hans Peter Freyther  <zecke@selfish.org>

        Reviewed by Simon.

        Removed the #define for USE_SYSTEM_MALLOC that we set in WebKit.pri
        already.

        * wtf/Platform.h:

2008-04-21  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Adam.

        <rdar://problem/5770054> JavaScript profiler (10928)
        - When stop profiling is called we need to stop the timers on all the
        functions that are still running.

        * profiler/FunctionCallProfile.cpp:
        (KJS::FunctionCallProfile::didExecute):
        (KJS::FunctionCallProfile::stopProfiling):
        * profiler/FunctionCallProfile.h:
        * profiler/Profiler.cpp:
        (KJS::Profiler::stopProfiling):

2008-04-21  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        Move collector main thread initialization from WebKit/win to KJS::initializeThreading.

        * kjs/InitializeThreading.cpp:
        (KJS::initializeThreading):

2008-04-21  Adam Roben  <aroben@apple.com>

        MSVC build fix

        Reviewed by Alexey Proskuryakov.

        * kjs/ustring.h:
        (KJS::UString::cost): Disable a warning about assigning a 32-bit
        size_t into a 31-bit size_t.

2008-04-21  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Lars.

        Made convertValueToQVariant accessible from within WebKit/qt/Api

        * bindings/qt/qt_runtime.h:

2008-04-21  Holger Hans Peter Freyther  <holger.freyther@trolltech.com>

        Reviewed by Simon.

        Build fix for Qt 4.3

        * When building WebCore/internal make sure the QT_[BEGIN,END]_NAMESPACE is
        always defined. Do this by adding defines to the compiler line
        * For users of our API this is not feasible. Every public header file should
        include qwebkitglobal.h. Define the QT_BEGIN_NAMESPACE and QT_END_NAMESPACE
        when we are building everything < 4.4.0 and don't have them defined.

        * kjs/testkjs.pro:
